--- a/Byakugan Sensor/pubspec.yaml
+++ b/Byakugan Sensor/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   vibrate: ^0.0.4
   logging: ^0.11.3+2
   camera: ^0.4.2
+  flutter_blue: ^0.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
