--- a/Byakugan Sensor/pubspec.yaml
+++ b/Byakugan Sensor/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   vibrate: ^0.0.4
+  http: ^0.12.0+1
   logging: ^0.11.3+2
   camera: ^0.4.2
   flutter_blue: ^0.5.0
